# claude-openai-bridge

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.toml.example
.github/workflows/: release-branch-ci.yml  release-docker-export.yml
src/: app.rs  config.rs  constants.rs  errors.rs  handlers.rs  main.rs  models.rs  state.rs  upstream.rs  upstream_parse.rs  utils.rs
src/conversion/: response.rs
src/conversion/request/: assistant.rs  mod.rs  models.rs  responses_convert.rs  responses_models.rs  system.rs  tool_result.rs  tools.rs  user.rs
src/conversion/response/: chat.rs  mod.rs  responses.rs  types.rs
src/conversion/stream/: helpers.rs  mod.rs  pipeline.rs  pipeline_responses.rs  responses_helpers.rs  responses_tools.rs  sse.rs  state.rs  thinking.rs
