[package]
name = "claude-openai-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json", "stream", "rustls-tls"] }
salvo = { version = "0.74.0", features = ["cors"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.1", features = ["v4"] }
